--- a/framework/requirements.txt
+++ b/framework/requirements.txt
@@ -41,7 +41,7 @@ google-crc32c==1.1.2
 google-resumable-media==1.3.1
 grpc-google-iam-v1==0.12.3
 grpcio==1.38.1
-hiredis==1.1.0
+hiredis
 idna==2.9
 importlib-metadata==3.10.1
 inflection==0.3.1
@@ -87,3 +87,4 @@ Werkzeug==2.2.3
 xmltodict==0.12.0
 yarl==1.6.3
 zipp==3.3.2
+sqlglot
