Add fim_registry_key and fim_registry_value to wdb stats

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -3031,6 +3031,12 @@ components:
                                 fim_registry:
                                   type: integer
                                   format: int32
+                                fim_registry_key:
+                                  type: integer
+                                  format: int32
+                                fim_registry_value:
+                                  type: integer
+                                  format: int32
                                 syscheck:
                                   type: integer
                                   format: int32
@@ -3355,6 +3361,12 @@ components:
                                   type: integer
                                   format: int32
                                 fim_registry:
+                                  type: integer
+                                  format: int32
+                                fim_registry_key:
+                                  type: integer
+                                  format: int32
+                                fim_registry_value:
                                   type: integer
                                   format: int32
                                 syscheck:
@@ -12014,6 +12026,8 @@ paths:
                               syscheck_queries: 2
                               fim_file_queries: 2
                               fim_registry_queries: 0
+                              fim_registry_key_queries: 0
+                              fim_registry_value_queries: 0
                             rootcheck_queries:
                               rootcheck_queries: 2
                             sca_queries:
@@ -12115,6 +12129,8 @@ paths:
                               syscheck_time: 49
                               fim_file_time: 30
                               fim_registry_time: 0
+                              fim_registry_key_time: 0
+                              fim_registry_value_time: 0
                             rootcheck_time:
                               rootcheck_time: 47
                             sca_time:
