Engine-test initial commit

--- a/src/engine/tools/engine-suite/setup.cfg
+++ b/src/engine/tools/engine-suite/setup.cfg
@@ -24,6 +24,8 @@ where = src
 [options.package_data]
 engine_schema =
     *.json
+engine_test =
+    *.json
 
 [options.entry_points]
 console_scripts =
@@ -32,6 +34,7 @@ console_scripts =
     engine-integration = engine_integration.__main__:main
     engine-clear = engine_clear.__main__:main
     engine-diff = engine_diff.__main__:main
+    engine-test = engine_test.__main__:main
 
 [options.extras_require]
 dev =
