Added rocksdb library dependencies

--- a/src/shared_modules/content_manager/tests/component/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/component/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(${PROJECT_NAME}
     gmock
     urlrequest
     router
+    rocksdb
 )
 
 target_link_libraries(${PROJECT_NAME} content_manager)
