--- a/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(${PROJECT_NAME}
     router
     wazuhext
     lzma
+    rocksdb
 )
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
